Fixed banner alignment and added more stars

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     background-color: black;
-    color: rgba(248, 247, 247, 0.637);
+    color: rgba(248, 247, 247, 0.822);
     margin: 0;
 }
 
@@ -27,7 +27,11 @@ canvas {
     position: absolute;
     top: 50%;
     margin-top: -.5em;
-    margin-right: -2.75em;
     z-index: inherit;
     opacity: 0;
+    width: 100%;
+}
+
+#welcomeBanner > p {
+    text-align: center;
 }
